# Customer_Feedback_Chatbot

./: Dockerfile  Procfile  README.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  tmp.json
public/: styles.css
resources/docs/: setting-up-aws-ec2-instance-for-chatbot.md
resources/sample_data/: feedback.csv  feedback_with_nps_v1.csv  feedback_with_nps_v1_2024.csv  feedback_with_nps_v1_and_topics.csv  feedback_with_nps_v1_and_topics_small.csv
sql_bot/: app.py  db_test.py  generate_golden_query_embeddings.py  golden_queries.py  golden_query.py  import_csv_to_sqlite.py  new.py  qa_few_shot_prompt_selector.py  query_result_summariser.py  sql_query_evaluator.py  sql_query_generator_agent.py  sql_query_runner_tool.py  sql_toolkit.py
